# sample-public-serverless

./: .gitignore  mangum.yml  pyproject.toml  requirements.txt
sample_public_serverless/: main.py
tests/: test_sample_public_serverless.py
