[tool.poetry]
name = "sample-public-serverless"
version = "0.1.0"
description = ""
authors = ["yuya okada <yuya.okada527@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.61.0"
uvicorn = "^0.11.8"
mangum = "^0.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mangum-cli = "^0.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
